package com.ich.pullgo.common.util

object TestTags {

    // Sign Up Tags
    const val STUDENT_SIGNUP = "STUDENT_SIGNUP"
    const val TEACHER_SIGNUP = "TEACHER_SIGNUP"
    const val ID_CHECK_BUTTON = "ID_CHECK_BUTTON"
    const val SIGNUP_ID_TEXT_FIELD = "SIGNUP_ID_TEXT_FIELD"
    const val SIGNUP_ID_NEXT_BUTTON = "SIGNUP_ID_NEXT_BUTTON"
    const val SIGNUP_PW_TEXT_FIELD = "SIGNUP_PW_TEXT_FIELD"
    const val SIGNUP_PW_CHECK_TEXT_FIELD = "SIGNUP_PW_CHECK_TEXT_FIELD"
    const val SIGNUP_PW_NEXT_BUTTON = "SIGNUP_PW_NEXT_BUTTON"
    const val SIGNUP_STUDENT_NAME = "SIGNUP_STUDENT_NAME"
    const val SIGNUP_STUDENT_PHONE = "SIGNUP_STUDENT_INFO"
    const val SIGNUP_STUDENT_PHONE_VERIFY = "SIGNUP_STUDENT_PHONE_VERIFY"
    const val SIGNUP_STUDENT_PARENT_PHONE = "SIGNUP_STUDENT_PARENT_PHONE"
    const val SIGNUP_STUDENT_SCHOOL = "SIGNUP_STUDENT_SCHOOL"
    const val SIGNUP_STUDENT_SUCCESS_BUTTON = "SIGNUP_STUDENT_SUCCESS_BUTTON"
    const val SIGNUP_TEACHER_NAME = "SIGNUP_TEACHER_NAME"
    const val SIGNUP_TEACHER_PHONE = "SIGNUP_TEACHER_PHONE"
    const val SIGNUP_TEACHER_PHONE_VERIFY = "SIGNUP_TEACHER_PHONE_VERIFY"
    const val SIGNUP_TEACHER_SUCCESS_BUTTON = "SIGNUP_TEACHER_SUCCESS_BUTTON"
    const val SIGNUP_STUDENT_SUCCESS_DIALOG = "SIGNUP_STUDENT_SUCCESS_DIALOG"
    const val SIGNUP_TEACHER_SUCCESS_DIALOG = "SIGNUP_TEACHER_SUCCESS_DIALOG"
}